--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ html {
     display: inline-block;
     height: 38px;
     padding: 0 30px;
-    color: #fff;
+    /* color: #fff; */
     text-align: center;
     font-size: 11px;
     font-weight: 600;
@@ -53,7 +53,7 @@ html {
     text-transform: uppercase;
     text-decoration: none;
     white-space: nowrap;
-    background-color: transparent;
+    /* background-color: transparent; */
     border-radius: 4px;
     border: 1px solid #bbb;
     cursor: pointer;
